QwikLabs/Kubernetes/Ingress/ingress_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: app-1
        image: "asia-northeast1-docker.pkg.dev/imade-gaming-265014/ingress/custom-nginx:v2.0"
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /healthcheck.html
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
