QwikLabs/Kubernetes/Ingress/ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"ports":{"8080":"bec"}}'
  name: ingress-service
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
